src/components/mdx/markdown.css
.markdown-body {
  word-break: break-word;
}

.markdown-body {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    padding-bottom: 16px;
    line-height: 1.25;
  }
}

.markdown-body a :hover {
  outline-width: 0;
}

.markdown-body strong {
  font-weight: 700;
}

.markdown-body p {
  margin: 0;
  margin-bottom: 16px;
  line-height: 1.8em;
}

.markdown-body img [align="right"] {
  padding-left: 20px;
}

.markdown-body img [align="left"] {
  padding-right: 20px;
}

.markdown-body a {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  letter-spacing: 0.5px;
  overflow-wrap: anywhere;
}

.markdown-body a :hover {
  text-decoration: underline;
  outline-width: 0;
}

.markdown-body blockquote {
  margin-left: 0;
  margin-bottom: 16px;
  padding-left: 16px;
  font-style: italic;
  color: rgb(160, 160, 160);
  background-color: rgba(160, 160, 160, 0.05);
  border-left: 0.3em solid rgba(160, 160, 160, 0.6);
}

.markdown-body blockquote > p {
  padding: 16px 0;
}

.markdown-body hr {
  margin-bottom: 16px;
}

.markdown-body ul,
ol {
  padding-left: 1em;
  padding-bottom: 16px;
}

.markdown-body ul > li {
  list-style: disc;
}

.markdown-body ol > li {
  list-style: decimal;
}

.markdown-body img {
  border-style: none;
  max-width: 100%;
  box-sizing: content-box;
}

@media screen and (min-width: 900px) {
  .markdown-body img {
    max-width: 80%;
  }
}

.markdown-body table {
  border-collapse: collapse;
  border-style: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 100%;
  overflow: auto;
  margin-bottom: 16px;
  color: #5f5f5f;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #d8d8d8;
  font-size: 0.95em;
}

@media (prefers-color-scheme: dark) {
  .markdown-body table {
    color: #d8d8d8;
    box-shadow: 0 0 0 1px rgba(160, 160, 160, 0.5);
  }
}

.markdown-body table tbody > :nth-child(2n) {
  background-color: rgba(160, 160, 160, 0.1);
}

.markdown-body table th {
  background-color: rgba(160, 160, 160, 0.2);
  font-weight: 700;
}

.markdown-body table th,
.markdown-body table td {
  padding: 0.5em 1.5em;
  border: 0.5px solid rgba(160, 160, 160, 0.5);
}

